tests/parser/constant_err10.expected
Syntax Error: line 3:
Unexpected token (TOK_COLON, ':'), expected a token type of:  
  'TOK_ASSIGN'
