tests/parser/constant_err10.mtp
(* constants *)

const test :10;
begin

end
.